--- a/husky_nav2_slam/config/ekf.yaml
+++ b/husky_nav2_slam/config/ekf.yaml
@@ -1,31 +1,31 @@
 ekf_filter_node:
   ros__parameters:
+    use_sim_time: true
     frequency: 50.0
-    sensor_timeout: 0.1
+    sensor_timeout: 0.2
     two_d_mode: true
 
     map_frame: map
     odom_frame: odom
     base_link_frame: base_link
-    world_frame: odom   # 'odom' if you want local continuous pose, 'map' if you want SLAM-corrected pose
+    world_frame: odom        # local, continuous pose for Nav2/SLAM
 
-    odom0: /odom
-    odom0_config: [true, true, true,
-                   false, false, true,
-                   false, false, false,
-                   false, false, false,
-                   false, false, false]
+    publish_tf: true
+    print_diagnostics: true
 
+    # Wheel odom from Gazebo bridge
+    odom0: /wheel/odom
     odom0_differential: false
     odom0_relative: false
+    odom0_queue_size: 10
+    #        x     y     z    r     p     yaw  vx    vy    vz    vroll vp    vyaw ax    ay    az
+    odom0_config: [true, true, false, false, false, true, true, false, false,  false, false, true, false, false, false]
 
+    # IMU (orientation + yaw rate)
     imu0: /imu_sensor/imu
-    imu0_config: [false, false, false,
-                  true, true, true,
-                  false, false, false,
-                  true, true, true,
-                  false, false, false]
-
     imu0_differential: false
     imu0_relative: false
+    imu0_queue_size: 50
     imu0_remove_gravitational_acceleration: true
+    #        x     y     z    r     p     yaw  vx    vy    vz    vroll vp    vyaw ax    ay    az
+    imu0_config:  [false,false,false, false,false,true, false,false,false, false,false,true, false,false,false]
