--- a/husky_nav2_slam/config/slamtoolbox_params_online_async.yaml
+++ b/husky_nav2_slam/config/slamtoolbox_params_online_async.yaml
@@ -18,13 +18,13 @@ slam_toolbox:
     base_frame: base_link
     scan_topic: /planar_laser/scan
     use_map_saver: true
-    mode: localization
-    # mode: mapping
+    # mode: localization
+    mode: mapping
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # will use pose
-    map_file_name: /home/rebellion/mobile_robotics/gz_start/robot_models/panda_arm_model/colcon_ws/src/husky_nav2_slam/map/map
+    # map_file_name: /home/rebellion/mobile_robotics/gz_start/robot_models/panda_arm_model/colcon_ws/src/husky_nav2_slam/map/map_v2
     # map_start_pose: [0.0, 0.0, 0.0]
     #map_start_at_dock: true
 
@@ -35,7 +35,7 @@ slam_toolbox:
     transform_publish_period: 0.05 #if 0 never publishes odometry
     map_update_interval: 2.0
     resolution: 0.05
-    min_laser_range: 0.20
+    min_laser_range: 0.60
     max_laser_range: 25.0 #for rastering images
     minimum_time_interval: 0.1
 
