--- a/husky_panda_description/config/bridge_husky_panda.yaml
+++ b/husky_panda_description/config/bridge_husky_panda.yaml
@@ -85,27 +85,27 @@
   direction: ROS_TO_GZ
   lazy: true
 
-# --- Wrist RGBD (GZ -> ROS) ---------------------------------------------------
-- ros_topic_name: "/panda/wrist/rgbd/image"
-  gz_topic_name: "/panda/wrist/rgbd/image"
+# --- gripper RGBD (GZ -> ROS) ---------------------------------------------------
+- ros_topic_name: "/panda/gripper/rgbd/image"
+  gz_topic_name: "/panda/gripper/rgbd/image"
   ros_type_name: "sensor_msgs/msg/Image"
   gz_type_name: "gz.msgs.Image"
   direction: GZ_TO_ROS
   lazy: true
-- ros_topic_name: "/panda/wrist/rgbd/depth_image"
-  gz_topic_name: "/panda/wrist/rgbd/depth_image"
+- ros_topic_name: "/panda/gripper/rgbd/depth_image"
+  gz_topic_name: "/panda/gripper/rgbd/depth_image"
   ros_type_name: "sensor_msgs/msg/Image"
   gz_type_name: "gz.msgs.Image"
   direction: GZ_TO_ROS
   lazy: true
-- ros_topic_name: "/panda/wrist/rgbd/camera_info"
-  gz_topic_name: "/panda/wrist/rgbd/camera_info"
+- ros_topic_name: "/panda/gripper/rgbd/camera_info"
+  gz_topic_name: "/panda/gripper/rgbd/camera_info"
   ros_type_name: "sensor_msgs/msg/CameraInfo"
   gz_type_name: "gz.msgs.CameraInfo"
   direction: GZ_TO_ROS
   lazy: true
-- ros_topic_name: "/panda/wrist/rgbd/points"
-  gz_topic_name: "/panda/wrist/rgbd/points"
+- ros_topic_name: "/panda/gripper/rgbd/points"
+  gz_topic_name: "/panda/gripper/rgbd/points"
   ros_type_name: "sensor_msgs/msg/PointCloud2"
   gz_type_name: "gz.msgs.PointCloudPacked"
   direction: GZ_TO_ROS
@@ -162,6 +162,31 @@
   direction: GZ_TO_ROS
   lazy: true
 
+- ros_topic_name: "/camera_pan_tilt/image"
+  gz_topic_name: "/camera_pan_tilt/image"
+  ros_type_name: "sensor_msgs/msg/Image"
+  gz_type_name: "gz.msgs.Image"
+  direction: GZ_TO_ROS
+  lazy: true
+- ros_topic_name: "/camera_pan_tilt/camera_info"
+  gz_topic_name: "/camera_pan_tilt/camera_info"
+  ros_type_name: "sensor_msgs/msg/CameraInfo"
+  gz_type_name: "gz.msgs.CameraInfo"
+  direction: GZ_TO_ROS
+  lazy: true
+- ros_topic_name: "/camera_pan_tilt/depth_image"
+  gz_topic_name: "/camera_pan_tilt/depth_image"
+  ros_type_name: "sensor_msgs/msg/Image"
+  gz_type_name: "gz.msgs.Image"
+  direction: GZ_TO_ROS
+  lazy: true
+- ros_topic_name: "/camera_pan_tilt/points"
+  gz_topic_name: "/camera_pan_tilt/points"
+  ros_type_name: "sensor_msgs/msg/PointCloud2"
+  gz_type_name: "gz.msgs.PointCloudPacked"
+  direction: GZ_TO_ROS
+  lazy: true
+
 - ros_topic_name: "/planar_laser/scan"
   gz_topic_name: "/planar_laser"
   ros_type_name: "sensor_msgs/msg/LaserScan"
@@ -172,6 +197,13 @@
   gz_topic_name: "/front_laser"
   ros_type_name: "sensor_msgs/msg/LaserScan"
   gz_type_name: "gz.msgs.LaserScan"
+  direction: GZ_TO_ROS
+  lazy: true
+
+- ros_topic_name: "/front_laser/points"
+  gz_topic_name: "/front_laser/points"   
+  ros_type_name: "sensor_msgs/msg/PointCloud2"
+  gz_type_name: "gz.msgs.PointCloudPacked"
   direction: GZ_TO_ROS
   lazy: true
 
