--- a/huskypanda_moveit_config/config/moveit_controllers.yaml
+++ b/huskypanda_moveit_config/config/moveit_controllers.yaml
@@ -9,10 +9,10 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 
 moveit_simple_controller_manager:
   controller_names:
-    - joint_trajectory_controller
-    - gripper_trajectory_controller
+    - panda_arm_controller
+    - panda_hand_controller
 
-  joint_trajectory_controller:
+  panda_arm_controller:
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     default: true
@@ -25,10 +25,10 @@ moveit_simple_controller_manager:
       - panda_joint6
       - panda_joint7
 
-  gripper_trajectory_controller:
-    action_ns: gripper_cmd
-    type: GripperCommand
+  panda_hand_controller:
+    action_ns: follow_joint_trajectory
+    type: FollowJointTrajectory
     default: false
     joints:
       - panda_finger_joint1
-      - panda_finger_joint2
+      
